--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.0.0",
     "redux-devise-axios": "^0.0.4",
     "redux-thunk": "^2.2.0",
+    "reverse-geocode": "^1.1.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.80.0"
   },
